# etl-workshop-3

./: .gitignore  Makefile  README.md  docker-compose.yml  init-db.sql  pyproject.toml
data/interim/: happiness_data.csv  happiness_data_alternative.csv  happiness_data_primary.csv
db_connection/: client.py  params.py
feature_selection/: feature_selection.py
kafka/: consumer.py  producer.py
models/: catboost_model.pkl
notebooks/: 1.0-nlg-EDA.ipynb  2.0-nlg-model_training.ipynb  ws3.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
